# codebase

./: .gitignore  LICENSE
algorithm/: dispatch.py  dynamic-programming.py  hanoi.py  lock.py  recursive.py  sort.py
ansible/: README.md  copy_env.yml  ubuntu-base.yml
asm/: 1.asm  2.asm  3.asm  4.asm  5.asm  Makefile  README.md
c/: Makefile  c-example.c  macro.c
c/api/: Makefile  VendorA.c  VendorA.h  VendorB.c  VendorB.h  default_vendor_library.c  default_vendor_library.h  main.c
c/bmp/: load_bmp.c
c/compile-link/0/: build.sh  main.c
c/compile-link/1/: build.sh  main.c
c/compile-link/2/: main.c
c/compile-link/3/: build.sh  main.c  stack.c
c/compile-link/shared-library/: build.sh  main.c
c/compile-link/shared-library/stack/: stack.c
c/compile-link/static-library/: build.sh
c/compile-link/static-library/stack/: is_empty.c  pop.c  push.c
c/file/: Makefile  file-example.c
c/func-pointer/: Makefile  func_pointer.c
c/gdb/: Makefile  README.md  hello.c  hello.h  test.c
c/handle/: Makefile  handle.c
c/library-dynamic/: Makefile  README.md  main.c
c/library-dynamic/src/: add.c  multitab.c  pi.c
c/library-static/: Makefile
c/library-static/include/: demo.h
c/library-static/src/: power.c
c/mpi/: Makefile  README.md  sum_example.c
c/ogl/: Makefile  bind.c  fence-2.c  fence.c  finite-state-machine-2.c  finite-state-machine.c  vao-vbo.c  vao.c  vbo-2.c  vbo.c
c/ring-buffer/: Makefile  ring-buffer.c
c/sliding-window/: 2.c  Makefile  README.md  ringbuffer.c  sliding-window.c
cmake/: README.md
cmake/1/: CMakeLists.txt
cmake/10/: CMakeLists.txt  CheckFunctionExists.cmake  build.sh  config.h.in
cmake/11/: CMakeLists.txt  build.sh  main.c
cmake/2/: CMakeLists.txt  mathFunction.c
cmake/3/: CMakeLists.txt  main.c  mathFunction.h
cmake/4/: CMakeLists.txt  main.c
cmake/5/: CMakeLists.txt  build.sh  main.c
cmake/5/math/: CMakeLists.txt
cmake/6/: CMakeLists.txt  build.sh
cmake/7/: CMakeLists.txt  build.sh
cmake/8/: CMakeLists.txt  build.sh  main.c
cmake/9/: CMakeLists.txt  config.h.in  main.c
cmake/Demo/: CMakeLists.txt  build.sh
cmake/Demo/cat/: CMakeLists.txt
cmake/Demo/include/: mylib.h
cmake/Demo/multiplication-table/: CMakeLists.txt  multiplication-table.c
cmake/Demo/pow/: CMakeLists.txt  main.c
cmake/Demo/pow/math/: CMakeLists.txt
cmake/Demo/pwd/: CMakeLists.txt  pwd.c
deb/1/: build-deb.sh
deb/hithere/: build.sh
deb/hithere/hithere-1.0/: Makefile  hithere.c
deb/hithere/hithere-1.0/debian/: README.Debian  changelog  control  files  rules
deb/hithere/hithere-1.0/debian/hithere/DEBIAN/: control  md5sums  postinst  preinst
deb/hithere/hithere-1.0/debian/hithere/usr/share/doc/hithere/: copyright
dkms/: README.md
dkms/hello-1.0.0/: Makefile  dkms.conf
docker/centos/: Dockerfile
docker/ubuntu/: Dockerfile
java/: Example.java
java/producer-consumer/1/: ThreadCaseDemo.java
java/producer-consumer/2/: Makefile  ThreadCaseDemo.java
java/producer-consumer/3/: ThreadCaseDemo.java
jenkins/: Jenkinsfile
lua/: demo.lua  myModule.lua
make/: README.md
make/1/: Makefile
make/2/: Makefile  main.c  mathFunction.c  multiplication-table.c  mymath.h
make/3/: Makefile
make/3/include/: mymath.h
make/3/src/: main.c  multiplication-table.c
make/4/: Makefile  hello.c
make/4-kernel-module/: Makefile
make/5-kernel-module/: Makefile  hello-1.c  hello.c
make/6-kernel-module/: Makefile  example.c
meson-ninja/Demo/: meson.build  run.sh
meson-ninja/Demo/cat/: cat.c  main.c
meson-ninja/Demo/multiplication-table/: main.c
meson-ninja/Demo/pow/: config.h
meson-ninja/Demo/pwd/: main.c  meson.build
meson-ninja/hello-meson/: main.c  meson.build  run.sh
meson-ninja/hello-ninja/: build.ninja  rules.ninja  run.sh
nodejs/puppeteer/: README.md  run.js
python/: algorithm.py  example.py  python-basedata.py  python-example.py
python/pdb/: README.md  hello.py  test.py
python/python-c/: Makefile  run.py  sum.c
python/python-egg/: README.md
python/python-egg/bee-egg/: setup.py
python/python-egg/bee-egg/bee/: __init__.py
python/spider-scrapy/: README.md
python/spider-scrapy/1/: quotes_spider.py  run.sh
python/spider-scrapy/non_pipeline/: scrapy.cfg
python/spider-scrapy/non_pipeline/non_pipeline/: items.py  middlewares.py  pipelines.py  settings.py
python/spider-scrapy/non_pipeline/non_pipeline/spiders/: page.py
python/spider-scrapy/tutorial/tutorial/: items.py  pipelines.py  settings.py
python/spider-scrapy/tutorial/tutorial/spiders/: FileDemo.py  ImageDemo.py  quotes.py
python/utils/: python-argparse.py  python-mako.py  python-re.py  python-requests.py  python-string.py  python-utils.py
python/utils/RPC/: client.py  server.py
python/utils/mako-template/: head.html.txt  html.tmpl  makedown.tmpl
rpm/: README.md
rpm/1/: Makefile  build.sh  myCat-2.c
rpm/1/src/: 00001.patch  Makefile  myCat.c
rpm/copy-dir/: build-package.sh
rpm/hello-world/: Makefile
shell/: shell-example.sh
vba/: README.md  VBA.xlsm
